--- a/bike_sharing_predictors_analysis.ipynb
+++ b/bike_sharing_predictors_analysis.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0b79090d",
+   "execution_count": 1,
+   "id": "abaea17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff357c10",
+   "id": "8ce128c9",
    "metadata": {},
    "source": [
     "## Step 1. Reading, Understanding and Visualizing the data"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72b597c6",
+   "id": "f82ee6eb",
    "metadata": {},
    "source": [
     "#### Step 1.a - Reading the data"
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "082d014d",
+   "execution_count": 2,
+   "id": "779dfd66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fae000c",
+   "id": "72b0e484",
    "metadata": {},
    "source": [
     "#### Step 1.b Understanding the data"
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6dd42085",
+   "execution_count": 3,
+   "id": "a2d1f2c8",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "4  1600  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8c4295f0",
+   "execution_count": 4,
+   "id": "172b0438",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "(730, 16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2bf4ac0",
+   "id": "3dbe0658",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32adc4f8",
+   "id": "e860bc45",
    "metadata": {},
    "outputs": [
     {
@@ -529,8 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0adc3f17",
+   "execution_count": 7,
+   "id": "18c39669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9ef271ed",
+   "execution_count": 8,
+   "id": "4af7184d",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "4  11.46350  43.6957  12.522300  1600  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,8 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e3851b9b",
+   "execution_count": 9,
+   "id": "cbbc8f1b",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "(730, 12)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,8 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "c351569b",
+   "execution_count": 10,
+   "id": "6ad40735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,8 +732,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fa49e2ca",
+   "execution_count": 11,
+   "id": "9482131e",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "4  11.46350  43.6957  12.522300  1600  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b927c745",
+   "id": "ca6530c9",
    "metadata": {},
    "source": [
     "#### Step 1.c Visulaizing the data"
@@ -886,8 +886,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6a52a951",
+   "execution_count": 12,
+   "id": "f96afa11",
    "metadata": {},
    "outputs": [
     {
@@ -918,16 +918,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b47bcc0",
+   "id": "62195617",
    "metadata": {},
    "source": [
-    "### Looking from above pairplot we have some variables like temp and atemp lineraly related to cnt. So linear regression makes sense here.\n"
+    "### Looking from above pairplot we have some variables like temp and atemp which are lineraly related to cnt. So linear regression makes sense here.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "1a713576",
+   "execution_count": 13,
+   "id": "f1f5a230",
    "metadata": {},
    "outputs": [
     {
@@ -967,9 +967,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1591ab74",
+   "metadata": {},
+   "source": [
+    "#### Few Observations\n",
+    "- Fall season has higher count(cnt) followed by summer season.\n",
+    "- There is a significant rise in count(cnt) from 2018 (0) to 1 (2019).\n",
+    "- There is a drastic drop in count(cnt) in the month of Dec and Nov.\n",
+    "- When wheather is clear then count(cnt) is higher and when its Light and snow its drastically low."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec7ebdb",
+   "metadata": {},
+   "source": [
+    "## Step 2. Preparing the data for modelling (train-test split, rescaling etc.)\n",
+    "\n",
+    "- 2.A Encoding\n",
+    "     - Convert binary categorical variable to 0 and 1\n",
+    "     - Convert other categorical varible to dummy variables\n",
+    "- 2.B Splitting into Train and Test\n",
+    "- 2.C Rescaling of the variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e7436d",
+   "id": "6c6ca475",
    "metadata": {},
    "outputs": [],
    "source": []
