Done with modelling

--- a/test.ipynb
+++ b/test.ipynb
@@ -4689,7 +4689,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "adab7797",
+   "id": "e06b4cfa",
    "metadata": {},
    "outputs": [
     {
@@ -5218,7 +5218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6e8341f",
+   "id": "397f7776",
    "metadata": {},
    "source": [
     "## Step 6. Model Evaluation"
@@ -5227,7 +5227,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9964ce91",
+   "id": "ff083c94",
    "metadata": {},
    "outputs": [
     {
@@ -5250,7 +5250,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d8430088",
+   "id": "9dd45138",
    "metadata": {},
    "outputs": [
     {
@@ -5271,9 +5271,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "680e5390",
+   "metadata": {},
+   "source": [
+    "## So we see R-Squared for training dataset is 0.8444123751564842 and for test dataset is 0.8168681962672555, which are close."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "07e11c2f",
+   "id": "e794186a",
    "metadata": {},
    "outputs": [
     {
@@ -5312,7 +5320,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b6da3ef1",
+   "id": "d58f3aca",
    "metadata": {},
    "outputs": [
     {
@@ -5349,7 +5357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8d72d3",
+   "id": "47ae8abe",
    "metadata": {},
    "source": [
     "## So Final model is \n",
@@ -5362,7 +5370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80505612",
+   "id": "efa5f13f",
    "metadata": {},
    "outputs": [],
    "source": []
