updated reason for keeping temp feature

--- a/bike_sharing_predictors_analysis.ipynb
+++ b/bike_sharing_predictors_analysis.ipynb
@@ -4483,7 +4483,9 @@
    "metadata": {},
    "source": [
     "### At this point all variables have p-value and VIF (except temp) less than 0.05 and 5.0 respectively. So we stop here.\n",
-    " - When I removed temp then Adj. R sqaured dropped to 0.792 i.e. 79.2%. Hence keeping it."
+    " - Reasons for keeping temp feature\n",
+    "     - When I removed temp then Adj. R sqaured dropped to 0.792 i.e. 79.2%. \n",
+    "     - Also with correlation heatmap I see temp is positively related to cnt."
    ]
   },
   {
